# echo360-downloader

./: .gitignore  Cargo.toml  README.md  index.html  nohup.out  out.out
src/: main.rs  task.rs
src/app/: error.rs  mod.rs
src/echo360/: courses.rs  error.rs  mod.rs  videos.rs
src/echo360/courses/: mod.rs
src/task/: mod.rs
