[package]
name = "echo360-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.32.0-rc.9"
tokio = { version = "1", features = ["full"] }

# GUI
eframe = "0.24.1"
egui_extras = { version = "0.24.1", features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

# Data
reqwest = { version = "0.10.8", features = ["default", "json", "blocking"] }
serde = "1.0.205"
serde_json = "1.0.122"

derive_more = { version = "1.0.0", features = ["from"] }
dotenv = "0.15.0"
